# colis-delivery-system

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/data/: graphe.json
backend/src/application/ports/: __init__.py  colis_repository.py  geocoding_service.py  livreur_repository.py  strategie_routage.py  unit_of_work.py
backend/src/application/services/: event_bus.py  event_handlers.py  selecteur_strategie.py
backend/src/application/use_cases/: __init__.py  calculer_route.py  creer_colis.py  creer_colis_en_lot.py  creer_livreur.py  lister_colis.py  lister_livreurs.py  obtenir_colis.py  obtenir_historique.py  supprimer_colis.py  transiter_colis.py
backend/src/domain/entities/: __init__.py  colis.py  graphe.py  historique_statut.py  livreur.py  route.py
backend/src/domain/events/: __init__.py  domain_events.py
backend/src/domain/exceptions/: __init__.py  colis_exceptions.py  routage_exceptions.py
backend/src/domain/factories/: __init__.py  colis_factory.py
backend/src/domain/states/: __init__.py  colis_state.py
backend/src/domain/value_objects/: __init__.py  adresse.py  criteres_routage.py  dimensions.py  poids.py  tracking_number.py
backend/src/shared/: config.py
backend/tests/fakes/: fake_colis_repository.py  fake_geocoding_service.py  fake_livreur_repository.py
backend/tests/integration/: conftest.py  test_colis_routes.py  test_health.py  test_routage_routes.py  test_transitions_routes.py
backend/tests/unit/: test_config.py
docs/: ARCHITECTURE.md  (+2 more)
(+49 files in other folders)
