[tool.poetry]
name = "colis-delivery-backend"
version = "0.1.0"
description = "Systeme de gestion de livraison de colis - Backend"
authors = ["Etudiant IFT785"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
dependency-injector = "^4.42.0"
httpx = "^0.27.2"
structlog = "^24.4.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
pylint = "^3.3.1"
radon = "^6.0.1"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
markers = [
    "integration: tests d'integration (peuvent appeler APIs externes)",
    "unit: tests unitaires purs"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",
    "C0115",
    "R0903",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
